--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         </div>
         <span>16</span>
       </header>
+      <div class="bg">
+        
+      </div>
       <section>
         <div class="part_1">
           <div class="container">
