--- a/index.html
+++ b/index.html
@@ -203,6 +203,13 @@
             </div>
           </div>
         </div>
+        <div class="part_3">
+          <div class="cards_3">
+            <div class="card__3">
+              
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
